# defcon-plasmoid

./: .gitignore  CMakeLists.txt  README.md  defcon.cpp  defcon.h  plasma-applet-defcon.desktop
ui/: config.ui
